<?xml version="1.0" encoding="utf-8"?>
<ScrollView
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:padding="@dimen/abc_dialog_padding_material"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent">
  <LinearLayout android:layout_width="fill_parent"
  	android:layout_height="wrap_content"
  	android:orientation="vertical">
  	<TextView android:layout_width="fill_parent"
  		android:layout_height="wrap_content"
  		android:textAppearance="?android:attr/textAppearanceMedium"
  		android:text="@string/field"
  		android:padding="4dp" />
  	<TextView android:layout_width="fill_parent"
  		android:layout_height="wrap_content"
  		android:textAppearance="?android:attr/textAppearanceSmall"
  		android:text="@string/fieldDescription"/>
  	
  	<TextView android:layout_width="fill_parent"
  		android:layout_height="wrap_content"
  		android:textAppearance="?android:attr/textAppearanceMedium"
  		android:text="@string/program"
  		android:padding="4dp" />
  	<TextView android:layout_width="fill_parent"
  		android:layout_height="wrap_content"
  		android:textAppearance="?android:attr/textAppearanceSmall"
  		android:text="@string/programDescription"/>
  	
  	<TextView android:layout_width="fill_parent"
  		android:layout_height="wrap_content"
  		android:textAppearance="?android:attr/textAppearanceMedium"
  		android:text="@string/controls"
  		android:padding="4dp" />
  	<TextView android:layout_width="fill_parent"
  		android:layout_height="wrap_content"
  		android:textAppearance="?android:attr/textAppearanceSmall"
  		android:text="@string/controlsDescription"/>
  	
  	<TextView android:layout_width="fill_parent"
  		android:layout_height="wrap_content"
  		android:textAppearance="?android:attr/textAppearanceMedium"
  		android:text="@string/recursion"
  		android:padding="4dp" />
  	<TextView android:layout_width="fill_parent"
  		android:layout_height="wrap_content"
  		android:textAppearance="?android:attr/textAppearanceSmall"
  		android:text="@string/recursionDescription"/>
  </LinearLayout>
</ScrollView>
