<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:layout_width="fill_parent" android:layout_height="fill_parent"
	android:orientation="vertical">

	<android.support.v7.widget.Toolbar
			android:id="@+id/solverToolbar"
			android:layout_width="match_parent"
			android:layout_height="?attr/actionBarSize"
			android:background="?attr/colorPrimaryDark"
			android:elevation="4dp"
			android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
			app:popupTheme="@style/ThemeOverlay.AppCompat.Dark"
	/>

	<com.team242.robozzle.WidthImageView
		android:layout_height="wrap_content" android:layout_width="fill_parent"
		android:id="@+id/puzzleView" />

	<LinearLayout android:layout_width="fill_parent"
		android:gravity="center_horizontal"
		android:layout_height="wrap_content" android:orientation="horizontal"
		android:padding="4dp"
        android:visibility="gone">
		<ImageButton android:layout_width="40dp" android:layout_height="40dp"
			android:scaleType="centerInside"
			android:background="@drawable/red"
			android:id="@+id/colorSwitcher"/>
		<View android:layout_width="8dp" android:layout_height="1dp"/>
		<ImageButton android:layout_width="40dp" android:layout_height="40dp"
			android:scaleType="centerInside"
			android:background="@drawable/star_switch"
			android:id="@+id/itemSwitcher"/>
		<View android:layout_width="8dp" android:layout_height="1dp"/>
		<ImageButton android:layout_width="40dp" android:layout_height="40dp"
			android:scaleType="centerInside"
			android:background="@drawable/top"
			android:id="@+id/robotSwitcher"/>
		<View android:layout_width="8dp" android:layout_height="1dp"/>
		<ImageButton android:layout_width="40dp" android:layout_height="40dp"
			android:scaleType="centerInside"
			android:background="@drawable/break_switcher"
			android:id="@+id/breakSwitcher"/>
	</LinearLayout>

	<ViewFlipper android:layout_height="fill_parent" android:layout_width="fill_parent"
			android:id="@+id/solverTools">
	<RelativeLayout
			android:layout_width="match_parent" android:layout_height="match_parent"
			android:orientation="horizontal">
		<LinearLayout
				android:id="@+id/playTools"
				android:layout_width="fill_parent"
				android:orientation="vertical"
				android:gravity="center_horizontal"
				android:layout_height="fill_parent">
			<ScrollView android:layout_width="fill_parent"
				android:layout_weight="1" android:layout_height="0dp">
				<LinearLayout android:layout_width="fill_parent"
					android:layout_height="wrap_content" android:orientation="vertical"
					android:gravity="center" android:id="@+id/commands">
				</LinearLayout>
			</ScrollView>

			<RelativeLayout android:layout_width="match_parent" android:layout_height="wrap_content">
				<LinearLayout
					android:id="@+id/controls"
					android:layout_width="fill_parent"
					android:gravity="center_horizontal"
					android:padding="@dimen/abc_action_bar_content_inset_material"
					android:layout_height="wrap_content" android:orientation="horizontal">
					<ImageButton android:layout_width="32dp"
						android:layout_height="32dp" android:scaleType="centerInside"
						android:background="@android:drawable/ic_media_play" android:id="@+id/playButton"
						/>
					<ImageButton android:layout_width="32dp"
						android:layout_height="32dp" android:scaleType="centerInside"
						android:background="@android:drawable/ic_media_pause"
						android:visibility="gone" android:id="@+id/pauseButton"/>
					<View android:layout_width="14dp" android:layout_height="1dp"/>
					<ImageButton android:layout_width="32dp"
						android:layout_height="32dp" android:scaleType="centerInside"
						android:background="@drawable/ic_media_stop"
						android:id="@+id/stopButton"/>
					<View android:layout_width="14dp" android:layout_height="1dp"/>

					<ImageButton
						android:layout_width="32dp" android:layout_height="32dp"
						android:background="@android:drawable/ic_media_next" android:id="@+id/stepButton"/>
					<View android:layout_width="14dp" android:layout_height="1dp"/>

					<LinearLayout
							android:layout_width="wrap_content" android:layout_height="wrap_content"
							android:id="@+id/editControls">
						<View
							android:layout_width="24dp" android:layout_height="32dp"/>

						<ImageButton
							android:layout_width="32dp" android:layout_height="32dp"
							android:background="@android:drawable/ic_menu_revert" android:id="@+id/undoButton"/>
						<View android:layout_width="14dp" android:layout_height="1dp"/>
						<ImageButton
							android:layout_width="32dp" android:layout_height="32dp"
							android:rotationY="180"
							android:background="@android:drawable/ic_menu_revert" android:id="@+id/redoButton"/>
					</LinearLayout>

					<LinearLayout
							android:layout_width="wrap_content" android:layout_height="wrap_content"
							android:visibility="gone"
							android:id="@+id/speedButtonContainer">
					<View android:layout_width="70dp" android:layout_height="32dp"/>
					<ImageButton
							android:layout_width="32dp" android:layout_height="32dp"
							android:background="@android:drawable/ic_media_ff" android:id="@+id/speedButton"/>
					</LinearLayout>
				</LinearLayout>

				<SeekBar
						android:id="@+id/speed"
						android:layout_width="match_parent" android:layout_height="wrap_content"
						android:visibility="gone"
						android:min="0" android:max="100" android:progress="50"
						android:layout_margin="@dimen/abc_action_bar_content_inset_material"
				/>
			</RelativeLayout>
		</LinearLayout>
		<TextView
				android:id="@+id/stackText"
				android:layout_width="wrap_content" android:layout_height="match_parent"
				android:gravity="bottom"
				android:visibility="invisible"
				android:text="__"
				android:typeface="monospace"
		/>
	</RelativeLayout>

	<!-- victory dialog - social -->
	<LinearLayout
			android:padding="8dp"
			android:id="@+id/winTools"
			android:layout_height="fill_parent"
			android:layout_width="fill_parent"
			android:orientation="vertical"
			android:gravity="bottom"
			android:layout_gravity="bottom">
		<TextView android:text="@string/win" android:textAppearance="@android:style/TextAppearance.DialogWindowTitle"
				android:gravity="center_horizontal"
				android:layout_width="fill_parent" android:layout_height="wrap_content" />
		<LinearLayout
			android:id="@+id/winToolsSocial"
			android:layout_height="wrap_content"
			android:paddingBottom="10dp"
			android:gravity="center"
			android:layout_width="fill_parent" android:orientation="vertical">
			<SeekBar android:layout_width="fill_parent" android:layout_height="wrap_content"
					android:id="@+id/difficulty"
					android:max="100" android:progress="50" />
			<TextView android:text="@string/rateDifficulty"
					android:gravity="center_horizontal"
					android:layout_height="wrap_content" android:layout_width="fill_parent"/>
			<CheckBox android:text="@string/like"
					android:id="@+id/iLike"
					android:layout_height="wrap_content" android:layout_width="wrap_content" />
		</LinearLayout>

		<RelativeLayout
			android:layout_width="fill_parent"
			android:layout_height="wrap_content">
			<LinearLayout android:layout_width="wrap_content" android:layout_height="wrap_content"
					android:id="@+id/winDone"
					android:background="@drawable/white_rect_border"
					android:layout_alignParentLeft="true"
					android:layout_alignParentTop="true">
				<TextView android:text="@string/puzzles" android:padding="4sp"
						android:minWidth="100dp" android:gravity="center"
						android:layout_height="wrap_content" android:layout_width="wrap_content"/>
			</LinearLayout>
			<LinearLayout android:layout_width="wrap_content" android:layout_height="wrap_content"
					android:id="@+id/winEdit"
					android:background="@drawable/white_rect_border"
					android:layout_alignParentRight="true"
					android:layout_alignParentTop="true">
				<TextView android:text="@string/editSolution" android:padding="4sp"
						android:minWidth="100dp" android:gravity="center"
						android:layout_height="wrap_content" android:layout_width="wrap_content"/>
			</LinearLayout>
		</RelativeLayout>
	</LinearLayout>
	</ViewFlipper>
</LinearLayout>